--- a/case2/frontend/public/index.html
+++ b/case2/frontend/public/index.html
@@ -24,7 +24,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Cubo Network</title>
+
+    <style>
+      html,
+      body,
+      #root{
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2ex;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        min-height: 100vh;
+      }
+    </style>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
